maybe im close to solving my layout issues

--- a/src/components/clr-drop-link/clr-drop-link.scss
+++ b/src/components/clr-drop-link/clr-drop-link.scss
@@ -2,17 +2,15 @@
 
 :host {
   display: inline-flex;
+  line-height: 2.5rem;
   height: 100%;
   position: relative;
-  padding: 0px 10px;
-  flex: 1;
   border: solid v(tertiary);
   border-width: 0px 1px 0px 0px;
   background-color: v(bg);
+  padding: 0px 15px 0px 15px;
+  @include box-size;
 
-  &:host(:last-of-type) {
-    border-width: 0px 0px 0px 0px;
-  }
 
   &:host(:hover){
     background-color: v(bg);
@@ -29,6 +27,12 @@
     color: v(fontColor);
     font-family: v(primaryFontFam);
     font-size: v(fontSize);
+
+    a{
+      //background-color: blue;
+      //padding: 0px 15px 0px 15px;
+      //@include box-size;
+    }
 
     &:hover{
       color: v(fontColor);
@@ -52,8 +56,7 @@
       background-color: v(bg);
     }
     ::slotted(*) {
-      background-color: v(bg);
-      padding: 5px 10px;
+      padding: 0px 15px 0px 15px;
       color: inherit;
       font-family: inherit;
       font-size: inherit;
@@ -65,6 +68,9 @@
   }
 
   .el {
+
+    @include box-size;
+
     display: flex;
     flex-direction: column;
     align-self: flex-end;
@@ -82,7 +88,6 @@
       justify-content: space-between;
       width: calc(100% - 0px);
       padding-left: 0px;
-      //min-height: 55px;
       font-family: inherit;
       font-size: inherit;
 
@@ -123,9 +128,6 @@
 
         ::slotted(*){
           display: inline-flex;
-          min-height: 40px;
-          line-height: 2.5;
-          padding: 5px 0px;
           color: inherit;
           font-size: inherit;
           font-family: inherit;
@@ -137,6 +139,9 @@
   @include respond(tablet) {
     &:host{
       flex: 0;
+      .el{
+        max-width: 100%;
+      }
     }
     &:host(:hover){
       background-color: v(bg);
@@ -145,6 +150,9 @@
   @include respond(mobile) {
     &:host{
       flex: 0;
+      .el{
+        max-width: 100%;
+      }
     }
     &:host(:hover){
       background-color: v(bg);
