--- a/src/components/clr-nav/clr-nav.scss
+++ b/src/components/clr-nav/clr-nav.scss
@@ -2,13 +2,21 @@
 
 :host {
   display: flex;
+  align-items: center;
   flex-direction: row;
   flex-wrap: nowrap;
   width: 100%;
+  z-index: 99;
   @include box-size;
-  
+
   ::slotted(nav) {
-    position: absolute;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    width: 100%;
+    //justify-content: space-evenly;
+    @include box-size;
+
   }
 
     @include respond(tablet) {      // responsive code for tablet viewport i.e. 600px
@@ -30,6 +38,8 @@
 
         ::slotted(nav) {
           position: relative;
+          flex-direction: column;
+          width: 100%;
         }
   
       }
@@ -54,6 +64,8 @@
         
         ::slotted(nav) {
           position: relative;
+          flex-direction: column;
+          width: 100%;
         }
       
       }
