--- a/src/utils/base.scss
+++ b/src/utils/base.scss
@@ -1,13 +1,6 @@
 
 :host {
   //* Color //
-  /*--primary: rgb(82, 109, 150);
-  --secondary: rgb(88, 117, 161);
-  --tertiary: rgb(101, 132, 179);
-  --highlight:rgb(252, 255, 205);
-  --fontColor: rgb(201, 219, 223);
-  --bg: rgb(72, 98, 136);*/
-
   --primary: inherit;
   --secondary: inherit;
   --tertiary: inherit;
